Basic functionality. Select all slots, by slot range or by slot list

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "PenPot Utils",
+  "name": "TrueNAS Utils",
   "code": "plugin.js",
   "description": "A utility plugin for PenPot that aims to make tedious tasks more efficient",
   "permissions": ["content:read", "content:write"]
